--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Content-addressable storage",
   "main": "dist/casl.js",
   "scripts": {
-    "test": "northbrook run esling && northbrook run mocha",
+    "test": "northbrook eslint && northbrook run mocha",
     "commit": "northbrook commit",
     "release": "northbrook release"
   },
@@ -21,8 +21,12 @@
   "devDependencies": {
     "@northbrook/eslint": "^1.2.1",
     "@northbrook/mocha": "^1.0.0",
+    "assert": "^1.4.1",
+    "buba": "^3.0.1",
     "ghooks": "^1.3.2",
+    "md5": "^2.2.1",
     "northbrook": "^3.1.0",
+    "rollup": "^0.35.11",
     "validate-commit-msg": "^2.8.0"
   }
 }
