--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
     "@northbrook/mocha": "^1.0.0",
     "assert": "^1.4.1",
     "buba": "^3.0.1",
+    "buble": "^0.13.2",
     "ghooks": "^1.3.2",
     "md5": "^2.2.1",
     "northbrook": "^3.1.0",
     "rollup": "^0.35.11",
+    "rollup-plugin-buble": "^0.13.0",
+    "rollup-plugin-commonjs": "^5.0.0",
+    "rollup-plugin-node-resolve": "^2.0.0",
+    "snabbdom": "^0.5.3",
     "validate-commit-msg": "^2.8.0"
   }
 }
